traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:4: error: not found: value marquerleSol
      marquerleSol()
      ^